@@ -1,3 +1,6 @@
+2009-06-28
+KEGGgraph 1.1.9: KEGGgraph software supports multiple substrates/products in KGML reaction from version 1.1.9. Earlier versions only read the first pair. Code name 'Kitty', thanking report from Plaimas Kitiporn, DKFZ.
+
 2009-04-27
 KEGGgraph 1.1.1: Improved render of KEGG pathway graphs with new interface of Rgraphviz, nodeRenderInfo parameter renamed into nodeRenderInfos to avoid conflict
 
